# modern-decision-diffuser

./: .gitignore  pyproject.toml
data/: __init__.py  minari_sequence.py
models/: __init__.py  decision_diffuser.py  diffusion.py  inv_dynamics.py  unet.py
scripts/: export_best_minari_video.py  train_minari.py  train_minari_modal.py
utils/: config_helpers.py  eval_helpers.py  helpers.py  logging.py  model_helpers.py  pytorch_utils.py
