[project]
name = "modern-dec-diffuser"
version = "0.1.0"
description = "Modernized version of decision-difffueser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym>=0.26.2",
    "minari[all]>=0.5.3",
    "mujoco>=3.9.0",
    "tensorboard>=2.20.0",
    "setuptools==81.0.0",
    "torch>=2.12.1",
]
